<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <EditText
        android:id="@+id/company_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="30dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/login"
        android:background="#5f0f0000"
        android:textColor="#ffffff"/>
    <Button
        android:id="@+id/register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/register"
        android:background="#5f0f0000"
        android:textColor="#ffffff"/>

</LinearLayout>
