<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/school_postion"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/school_postion"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_style"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/back" />

            <TextView
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/school_request"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/school_requset"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_style"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/back" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/school_address"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/school_address"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-4dp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/school_time"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/school_time"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-4dp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_people"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/school_people"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-4dp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/school_ok"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:text="@string/school_ok"
                android:background="#5f0f0000"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
