<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/title_name"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ltitle_name"
                android:textSize="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_company_name"
                android:textSize="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/edit_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"


                />

            <TextView
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_intro"
                android:textSize="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                />

            <EditText
                android:id="@+id/edit_intro"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_style"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/back"
                />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textSize="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                />


            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/register_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:text="注册"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_btn"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>


        </LinearLayout>
    </ScrollView>



    

</LinearLayout>
